# Stella_desktop

./: .gitignore  README.md
bluetooth_test/: Cargo.toml
bluetooth_test/src/: main.rs
headphones_jack/: Cargo.toml
headphones_jack/src/: main.rs
stella/: Cargo.toml
stella/src/: main.rs  wallpaper_changer.rs
stella/src/wallpaper_changer/: ble_device.rs  devices.rs
time_test/: Cargo.toml
time_test/src/: main.rs
