[package]
name = "wallpaper_changer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde =  "1.0.117"
serde_json = "1.0.78"
execute = "0.2.9"
blurz = "0.4.0"
notify-rust = "4"
chrono = "0.4.19"
